[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/sprites/ship1.png" type="Texture" id=1]
[ext_resource path="res://characters/character.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/shot1effect.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/hitbox.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/bomb.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ship_cruiser2.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ships_biomech1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/exp2_0.png" type="Texture" id=8]
[ext_resource path="res://assets/sfx/SFX_Explosion_02.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/SFX_Explosion_01.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "cruiser2",
"speed": 20.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "cruiser1",
"speed": 10.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "biomech1",
"speed": 20.0
} ]

[sub_resource type="Animation" id=27]
length = 0.05
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 2.92817, 0.307786, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 40.1098, 39.5961, 39.3686, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=30]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 0.001, 0.001 ), Vector2( 3.5, 3.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 0.353553, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=31]
radius = 1.41729

[sub_resource type="Animation" id=32]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=33]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=34]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 256, 340 ), Vector2( 256, 278 ) ]
}

[sub_resource type="Animation" id=35]
length = 2.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "goto_main_menu"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DeathSound:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Character" type="KinematicBody2D"]
position = Vector2( 256, 278 )
collision_mask = 28
script = ExtResource( 2 )
FIRE_RATE = 0.1
LIVES = 5
BOMBS = 3
POWER_MAX = 100
BOMB_CHARGE_MAX = 200
LIFE_CHARGE_MAX = 300
DEATH_PENALTY = 1.5

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 17 )
frame = 1

[node name="Sprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.690292, 0.690292 )
frames = SubResource( 26 )
animation = "cruiser2"
frame = 1
playing = true

[node name="Blink" type="AnimationPlayer" parent="Sprite"]
anims/Blink = SubResource( 27 )

[node name="Invincible" type="AnimationPlayer" parent="Sprite"]
anims/Invincible = SubResource( 28 )

[node name="ShotEffect" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -18 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShotEffect"]
anims/Shooting = SubResource( 29 )

[node name="BombEffect" type="Sprite" parent="."]
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BombEffect"]
anims/Bomb = SubResource( 30 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 31 )

[node name="Sprite" type="Sprite" parent="Hitbox"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hitbox"]
anims/HideHitbox = SubResource( 32 )
anims/ShowHitbox = SubResource( 33 )

[node name="Center" type="Node2D" parent="."]

[node name="CenterDraw" type="Line2D" parent="Center"]
visible = false
position = Vector2( 0, -1 )
z_index = 10
points = PoolVector2Array( 0, 0, 0, 2 )
width = 2.0
default_color = Color( 0.92549, 0.0666667, 0.0666667, 1 )

[node name="ShotOrigin" type="Node2D" parent="."]
position = Vector2( 0, -24 )

[node name="CenterDraw" type="Line2D" parent="ShotOrigin"]
visible = false
position = Vector2( 0, -1 )
z_index = 10
points = PoolVector2Array( 0, 0, 0, 2 )
width = 2.0
default_color = Color( 0.92549, 0.0666667, 0.0666667, 1 )

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.1

[node name="DiffUpdate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Invincibility" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 34 )
anims/game_over = SubResource( 35 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="BombSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="timeout" from="DiffUpdate" to="." method="_on_DiffUpdate_timeout"]
[connection signal="timeout" from="Invincibility" to="." method="_on_Invincibility_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
